remade the buttons correctly and styled them for spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,39 @@
 * {
-    border: 1px solid red
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(178, 178, 178);
+}
+
+.header {
+    margin-top: 30px;
 }
 
 .container {
-    width: 300px;
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 10px;
+    
 }
 
-input[type="button"] {
-    margin: 2px;
-    padding: 0;
+.row.big-keys {
+    display: flex;
+    justify-content: space-between;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .row {
@@ -17,26 +41,7 @@ input[type="button"] {
     justify-content: space-between;
 }
 
-.conflict {
-    display: flex;
-    justify-content: space-between;
+button {
+    border-radius: 5px;
+    border: 2px solid black;
 }
-
-.left {
-    display: flex;
-    flex-direction: column;
-    padding-right: 0;
-}
-
-.left .top, .left .bottom {
-    display: flex;
-    justify-content: space-between;
-    
-}
-
-.big {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
